--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,5 @@
-/* color palette from <https://github.com/vuejs/theme> */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Big+Shoulders+Stencil+Text:wght@100;300;400;500;600;700;800;900&display=swap'); /* color palette from <https://github.com/vuejs/theme> */
+
 :root {
     --vt-c-white: #ffffff;
     --vt-c-white-soft: #f8f8f8;
@@ -17,10 +18,13 @@
     --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
     --vt-c-text-dark-1: var(--vt-c-white);
     --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+    --vt-c-hoover-light: #cdcdcd;
+    --vt-c-text: #6c757d;
 }
 
 /* semantic color variables for this project */
 :root {
+    font-size: 10px;
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
     --color-background-mute: var(--vt-c-white-mute);
@@ -29,6 +33,8 @@
     --color-heading: var(--vt-c-text-light-1);
     --color-text: var(--vt-c-text-light-1);
     --section-gap: 160px;
+    --hoover-color: var(--vt-c-hoover-light);
+    --text-color: var(--vt-c-text);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -44,22 +50,29 @@
 }
 
 *, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
     position: relative;
+    margin: 0;
+    padding: 0;
+    font-size: 1.6rem;
     font-weight: normal;
+    box-sizing: border-box;
+    letter-spacing: 0.1rem;
+    scroll-behavior: smooth;
 }
 
 body {
     min-height: 100vh;
     color: var(--color-text);
     background: var(--color-background);
+    line-height: 1.8;
+    font-family: 'Big Shoulders Stencil Text', cursive;
     transition: color 0.5s, background-color 0.5s;
-    line-height: 1.6;
-    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+
+p {
+    color: var(--text-color);
 }
