--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,12 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-
+  padding: 0 2rem;
   font-weight: normal;
+}
+
+.anime_title {
+  font-size: 3.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
 }
