--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,37 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Big+Shoulders+Stencil+Text:wght@100;300;400;500;600;700;800;900&display=swap'); /* color palette from <https://github.com/vuejs/theme> */
 
 :root {
-    --white: #ffffff;
+    --white: rgba(253, 253, 253, 0.99);
     --white-soft: #f8f8f8;
     --white-mute: #f2f2f2;
     --black: #181818;
     --black-soft: #222222;
     --black-mute: #282828;
+    --red: #a9193b;
     --divider-light-1: rgba(60, 60, 60, 0.29);
     --divider-light-2: rgba(60, 60, 60, 0.12);
     --divider-dark-1: rgba(84, 84, 84, 0.65);
     --divider-dark-2: rgba(84, 84, 84, 0.48);
-    --text-light-1: rgba(60, 60, 60, 0.80);
-    --text-light-2: rgba(60, 60, 60, 0.66);
-    --text-dark-1: var(--white);
-    --text-dark-2: rgba(235, 235, 235, 0.64);
-    --vt-c-hoover-light: #cdcdcd;
-    --vt-c-text: #6c757d;
+    --text-light-1: rgb(97, 97, 97);
+    --text-light-2: rgba(77, 77, 77, 0.9);
+    --hover-light: rgb(25, 25, 25);
+
+    --base-font-size: 10px;
 }
 
 /* semantic color variables for this project */
 :root {
-    font-size: 10px;
     --section-gap: 160px;
     --color-background: var(--white);
     --color-background-soft: var(--white-soft);
     --color-background-mute: var(--white-mute);
     --color-border: var(--divider-light-2);
     --color-border-hover: var(--divider-light-1);
-    --color-heading: var(--text-light-1);
+    --color-heading: var(--text-light-2);
+    --color-hover: var(--hover-light);
     --color-text: var(--text-light-1);
-    --hoover-color: var(--vt-c-hoover-light);
-    --text-color: var(--vt-c-text);
+    --color-link: var(--red);
+
+    font-size: var(--base-font-size);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -41,7 +42,5 @@
         --color-background-mute: var(--black-mute);
         --color-border: var(--divider-dark-2);
         --color-border-hover: var(--divider-dark-1);
-        --color-heading: var(--text-dark-1);
-        --color-text: var(--text-dark-2);
     }
 }
