feat: add some style

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Big+Shoulders+Stencil+Text:wght@100;300;400;500;600;700;800;900&display=swap'); /* color palette from <https://github.com/vuejs/theme> */
+/* color palette from <https://github.com/vuejs/theme> */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Big+Shoulders+Stencil+Text:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
     --white: rgba(253, 253, 253, 0.99);
