--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,12 +1,32 @@
 @import './base.scss';
 
-#app {
+// Main container of the page
+.container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
+// Used for h1
 .title {
   font-size: 3.5rem;
   margin-bottom: 2rem;
+}
+
+// Base button class
+.btn {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  border: none;
+  font-size: 1.4rem;
+  text-decoration: none;
+  color: var(--color-text);
+  background: var(--white);
+  box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: var(--white-soft);
+    box-shadow: none;
+  }
 }
